samples/_failures_safe/1761711818_699733_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e841c18.c: In function ‘main’:
./samples/SAFE/__tmp_1e841c18.c:170:5: error: expected declaration or statement at end of input
  170 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_1e841c18.c:170:5: error: expected declaration or statement at end of input
